# py_software_renderer

./: README.md  pyproject.toml
src/py_software_renderer/: display.py  main.py
