[project]
name = "py_software_renderer"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramtin Javanmardi",email = "ramme95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setuptools (>=80.9.0,<81.0.0)",
    "raylib (>=5.5.0.2,<6.0.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "py_software_renderer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
